--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,24 @@ body {
 }
 .item-block {
     border: 1px solid #fff;
+    margin: 10px;
+    height: 70px;
 }
 .item-block1 {
     grid-column: 1 / -1;
+}
+/* blocks */
+.operator {
+    background: rgb(51, 47, 47);
+}
+
+.numbers{
+    background: #eee;
+}
+.item-block16 {
+    grid-column: 3 / -1;
+}
+.item-block17 {
+    grid-column: 1 / -1;
+
 }
