centered text and gave color

--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,14 @@ body {
 
 .calculator {
     display: grid;
-    background: #333;
+    background: #337;
     grid-template-columns: repeat(3,1fr);
     max-width: 400px;
     margin: 10px;
     font-size: 50px;
     margin: 0 auto;
+    border: 5px solid pink;
+    border-radius: 5px;
 }
 .item-block {
     border: 1px solid #fff;
@@ -22,6 +24,9 @@ body {
 }
 .item-block1 {
     grid-column: 1 / -1;
+    font-size: 32px;
+    text-align: center;
+    color:#000;
 }
 /* blocks */
 .operator {
