--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,11 @@ body {
 }
 .item-block {
     border: 1px solid #fff;
+    border-radius: 2px;
     margin: 10px;
-    height: 70px;
+    height: 60px;
+    font-size: 20px;
+
 }
 .item-block1 {
     grid-column: 1 / -1;
@@ -31,6 +34,7 @@ body {
 /* blocks */
 .operator {
     background: rgb(51, 47, 47);
+    color:#fff;
 }
 
 .numbers{
