--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,13 @@ body {
     margin: 0;
     padding: 0;
     font-size: 16px;
-    background: linear-gradient(to right, #eee, #3dfaaa);
+    background: linear-gradient(to right, rgb(113, 13, 194), #3dfaaa);
     text-align: center;
+}
+h1 {
+    color: #fff;
+    font-weight: 400;
+    text-decoration: underline;
 }
 
 .calculator {
